--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "id": "19add2dd-7a22-4af5-8d34-e21c75f705bc",
   "name": "SD Seminar",
   "publisher": "D.E. Veloper",
-  "brief": "",
+  "brief": "Short brief",
   "description": "",
   "version": "1.0.0.0",
   "privacyStatement": "",
